# async_sse_example

./: README.md  pyproject.toml  runserver.sh
project/: asgi.py  settings.py  urls.py
test/: views.py
